fix coin vertical align

--- a/styles/style.css
+++ b/styles/style.css
@@ -218,6 +218,8 @@ h2,h3 {
 }
 
 .container {
+    margin-top: auto;
+    margin-bottom: auto;
   padding-left: 30px;
   padding-right: 30px;
   display: flex;
